# under-clone

./: .flake8  .gitignore  .gitreview  .pypirc  .yamllint  PKG-INFO  README.md  TODO.txt  install-underground-actions.yml  requirements.txt  requirements.yml  setup.cfg  test-requirements.txt  test_sample.py  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: install-underground-actions.yml  python-app.yml  underground-init.yml  underground-tox.yml
ansible/: ansible.cfg  autodiscovery.yml  bifrost-builder.yml  bifrost.yml  bootstrap.yml  build.yml  configure.yml  deployer.yml  destroy.yml  dib-builder.yml  gather-facts.yml  init.yml  kind-create.yaml  kind-create.yml  kind-destroy.yaml  kind-destroy.yml  prechecks.yml  site.yml
ansible/group_vars/: all.yml
ansible/inventory/: aio  converged  devel  distributed  hci  kolla.train  kolla.ussuri  kolla.victoria  kolla.wallaby  kolla.xena  kolla.zed  openstack_inventory.py
ansible/plugins/filter/: ini.py  map_attributes.py
ansible/plugins/lookup/: ini_file.py
ansible/roles/build-containers/: README.md
contrib/: pre-req.sh
contrib/customer/ammagamma/: fluctus_baremetal_vars.yml
contrib/dev/ansible/: storage.yml
contrib/dev/heat/: README.md  kolla-dev.yml  underground-aio-baremetal.yml  underground-aio.yml  underground-hyperconverged.yml
contrib/dev/packer/: CentOS7.json
contrib/dev/vagrant/: README.md  Vagrantfile  Vagrantfile-ansible-example  Vagrantfile.centos-8  Vagrantfile.centos-stream8  Vagrantfile.centos7  Vagrantfile.hci  Vagrantfile.ubuntu-bionic  Vagrantfile.ubuntu-focal  Vagrantfile.ubuntu-focal.libvirt  vagrant.yml
contrib/examples/: hci  underground_vars.yml
contrib/scripts/baremetal/: node_datasave.sh  node_deploy.sh  node_enroll.sh  node_inspect.sh  node_provide.sh  node_setrk.sh  node_showrk.sh
contrib/vars/: baremetal-qa01.yaml  baremetal-qa02.yaml  baremetal-qa03.yaml  ipmi.sh  qa01-cloud-init.yaml  qa02-cloud-init.yaml  qa03-cloud-init.yaml  qa_ceph.yml  qa_kolla.yml  test.sh  underground_baremetal_heat_vars.yml  underground_baremetal_vars.yml  underground_baremetal_vars.yml.orig
doc/: README-baremetal.md  README-dib.md
elements/cloud-user/: README.rst  element-deps  package-installs.yaml
elements/dib/: README.rst  package-installs.yaml
elements/docker-engine/: docker-daemon-ipv6.json  docker-daemon.json  element-deps
elements/fluctus-prereq/: README.rst  element-deps  package-installs.yaml
elements/no-cloud/: README.rst  element-deps
elements/openstack-client/: README.rst  pkg-map
elements/physical/: README.rst  element-deps  growpart-template.cfg.j2  package-installs.yaml  pkg-map
elements/virtual/: README.rst  block-device-default.yaml  element-deps  package-installs.yaml
examples/ironic-qa/: ironic-qa.sh
tests/: find_disks.json  modules_test.sh  net_test_create.sh  test_vars.yml  underground_test.sh
tools/: underground  underground-autodiscovery  underground-deployer
underground/: __init__.py  version.py
(+392 files in other folders)
