[metadata]
name = underground
summary = E4 Underground Platform based on Fluctus and Kind
description-file =
    README.rst
author = "Federico Pinca"
author-email = federico.pinca@e4company.com
home-page = https://www.e4company.com/en/open-source-cloud-platform/
license = Apache License, Version 2.0
url="https://pypi.cloud.e4.lan/repository/pypi/underground"
classifier =
    Environment :: Underground
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    underground
data_files =
    share/underground/ansible = ansible/*
    share/underground/doc = doc/*
    share/underground = setup.cfg
    etc/underground = etc/underground/*

scripts =
    tools/underground

[entry_points]
console_scripts =

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
