[metadata]
name = underground
summary = Baremetal Platform deployment based on Kolla Ansible
description_file =
    README.md
author = "Federico Pinca"
author_email = federico.pinca@e4company.com
maintainer_email = federico.pinca@e4company.com
home_page = "https://www.e4company.com/en/open-source-cloud-platform/"
license = Apache License, Version 2.0
#url = "https://pypi.e4company.com/underground"
classifier =
    Environment :: Underground
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    underground
data_files =
    share/underground/ansible = ansible/*
    share/underground/elements = elements/*
    share/underground/examples = contrib/vars/*
    share/underground/doc = doc/*
    share/underground/doc =
        README.md
    share/underground =
        requirements.txt
        setup.cfg
	requirements.yml
scripts =
    tools/underground
    tools/underground-autodiscovery
    tools/underground-deployer

[entry_points]
console_scripts =

[global]
setup_hooks =
    pbr.hooks.setup_hook

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
